--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@
 
 #icon {
     display: block;
-    margin: 0 auto;
+    margin: 2em auto 1em auto;
     width: 20em;
-    height: auto;
+    height: 20em;
     border-radius: 20%;
 }
 
