--- a/style.css
+++ b/style.css
@@ -28,7 +28,15 @@
     margin: 2em auto 1em auto;
     width: 20em;
     height: 20em;
+    padding: 5% 5% 5% 5%;
+    border-radius: 40%;
+    background-color: rgba(250, 230, 250, 0.8);
+}
+
+#icon>img {
     border-radius: 20%;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -218,4 +226,9 @@
 
 #site-info>.references {
     align-items: center;
+}
+
+#site-info>.references>.elements>.element {
+    font-size: small;
+    color: gray;
 }
