--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100svh;
+    height: auto;
 }
 
 #icon {
@@ -29,8 +29,6 @@
     width: 20em;
     height: 20em;
     padding: 5% 5% 5% 5%;
-    border-radius: 40%;
-    background-color: rgba(250, 230, 250, 0.8);
 }
 
 #icon>img {
