--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@
 #icon {
     display: block;
     margin: 2em auto 1em auto;
-    width: 20em;
-    height: 20em;
+    width: min(80vw, 20em);
+    height: auto;
     padding: 5% 5% 5% 5%;
 }
 
@@ -117,6 +117,35 @@
     height: 4em;
     margin: 0 1em 0 1em;
 }
+
+#recent_activity {
+    width: 100%;
+}
+
+#recent_activity>.recent_activity-head {
+    font-size: large;
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+#recent_activity>.tabs {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    margin: 1em 0 1em 0;
+    padding: 1em 10% 1em 10%;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(220, 220, 255, 0.5);
+}
+
+#recent_activity>.tabs>.tab {
+    padding: auto;
+}
+
+
 
 
 #portfolio {
@@ -212,8 +241,7 @@
 
 #contact_name>input,
 #contact_belong>input,
-#contact_email>input,
-#contact_submit>input {
+#contact_email>input {
     margin: 0.5em 0 0.5em 0;
     padding: 0.5em 0.5em 0.5em 0.5em;
     width: 90%;
@@ -228,6 +256,14 @@
     border: none;
     background-color: whitesmoke;
     height: 10em;
+}
+
+
+#contact_submit>input {
+    margin: 0.5em 0 0.5em 0;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    width: 90%;
+    border: none;
 }
 
 
