--- a/style.css
+++ b/style.css
@@ -13,6 +13,22 @@
 
 }
 
+body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("./img/colorful-abstract-art-background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1;
+    /* 背景として背面に */
+}
+
+
 
 
 #main {
