--- a/tools/style.css
+++ b/tools/style.css
@@ -65,7 +65,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
+    width: 30rem;
     /* 各カードの幅 */
     background-color: #fff;
     border-radius: 8px;
