--- a/tools/style.css
+++ b/tools/style.css
@@ -79,6 +79,7 @@ h1 {
 /* ツールカードの内容 */
 .tool {
     display: flex;
+    width: 90%;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -113,10 +114,11 @@ h1 {
     overflow: hidden;
 }
 
-.tool-preview iframe {
+.tool-preview>iframe {
     width: 100%;
     height: 100%;
     border: none;
+    border-radius: 5%;
 }
 
 /* フッターの設定 */
