--- a/content-style.css
+++ b/content-style.css
@@ -13,6 +13,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: black;
 }
 
 #thumbnail {
@@ -34,4 +35,92 @@ body>h1 {
 
 body>p {
     font-size: large;
+}
+
+form>div {
+    margin: 1em 0 1em 0;
+}
+
+form>div>p {
+    margin: 1em 0 0.5em 0;
+}
+
+form>div>input {
+    width: 100%;
+    height: 2em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    border-radius: 0.5em;
+    border-width: 2px;
+    border-style: solid;
+    border-color: aliceblue;
+    color: aliceblue;
+}
+
+form>div>textarea {
+    width: 100%;
+    height: 10em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    border-width: 2px;
+    border-style: solid;
+    border-color: aliceblue;
+    color: aliceblue;
+}
+
+#contact_submit>input {
+    width: 100%;
+    height: 3em;
+    padding: 0.5em 0.5em 0.5em 0.5em;
+    transition: all 0.3s ease;
+    border-radius: 0.5em;
+    border-width: 2px;
+    border-style: solid;
+    border-color: aliceblue;
+    color: aliceblue;
+}
+
+#contact_submit>input:hover {
+    background-color: aliceblue;
+    color: black;
+}
+
+#icons {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#icons>a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 1em 0 1em 0;
+    padding: 1em 10% 1em 10%;
+    width: 80%;
+    text-align: center;
+    border-color: aliceblue;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: aliceblue;
+    transition: all 0.3s ease;
+}
+
+#icons>a:hover {
+    background-color: aliceblue;
+    color: black;
+}
+
+#icons>a>p {
+    width: 7em;
+}
+
+#icons>a>img {
+    width: 2em;
+    height: 2em;
+    margin: 0 1em 0 1em;
 }
