--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     font-family: 'Pacifico', cursive;
     background-color: #000000;
-    color: #b9bbbe;
+    color: aliceblue;
     margin: 0;
     padding: 0;
 }
@@ -86,34 +86,6 @@ body {
 
 
 
-#back {
-    position: fixed;
-    left: 0;
-    padding: 10px;
-    color: #b9bbbe;
-    text-decoration: none;
-    font-size: 16px;
-    background-color: #2C2F33;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-#back:hover {
-    background-color: #2C2F33;
-}
-
-#language {
-    position: absolute;
-    right: 0;
-    padding: 10px;
-    color: #b9bbbe;
-    text-decoration: none;
-    font-size: 16px;
-    background-color: #2C2F33;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
 #main {
     transform-origin: center;
     width: 100vw;
@@ -130,10 +102,11 @@ body {
     font-size: 50px;
     text-align: center;
 
-    color: #b9bbbe;
+    color: aliceblue;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: color 0.3s ease-in-out;
 }
 
 iframe {
